# cincv-exp-sv_c4

./: .gitignore  AUTHORS  README.Cin2.1.5SV  README.Cin2.1SV  TODO.cin4merge  TODO.conflicts  configure  configure.in  global_config
autom4te.cache/: output.0  requests  traces.0
cinelerra/: Makefile  Makefile.am  aautomation.C  aboutprefs.C  amodule.h  apanel.C  apatchgui.C  apluginthread.C  apluginthread.h  asset.C  asset.h  assetedit.C  assetedit.h  assets.C  audio1394.C  audioalsa.C  audioconfig.h  audioesound.h  audiooss.C  audiooss.h  auto.C  auto.h  automation.C  automation.h  automation.inc  autos.C  autos.h  awindow.C  awindow.h  awindowgui.C  awindowgui.h  batchrender.C  brender.C  browsebutton.C  browsebutton.h  cache.C  canvas.C  channeledit.C  channelpicker.C  clipedit.C  (+199 more)
doc/: cinelerra.texi
guicast/: Makefile  arraylist.h  bcclipboard.C  bcclipboard.h  bcdialog.C  bcfilebox.C  bcfilebox.h  bchash.C  bclistbox.C  bcmenu.h  bcnewfolder.C  bcprogressbox.C  bcresources.C  bcresources.h  bcslider.C  bcslider.h  bctextbox.C  bctextbox.h  bctheme.C  bctheme.h  bctoggle.C  bcwindowbase.C  bcwindowbase.h  bcwindowbase.inc  bcwindowdraw.C  bcwindowevents.C  condition.C  filesystem.C  filesystem.h  guicast.h  replace.C  stringfile.C  thread.h  units.C  vframe.C  vframe3d.C
libmpeg3/: mpeg3demux.c  mpeg3private.h
plugins/: .gitignore  Makefile  (+2 more)
plugins/colorgrade/: Makefile.am  aggregated.h  colorgrade.C  colorgrade.h  colorgrade.inc  colorgradeconfig.C  colorgradeconfig.h  colorgradeconfig.inc  colorgradewindow.C  colorgradewindow.h  colorgradewindow.inc
(+165 files in other folders)
